tests/ui/consts/const-eval/const_panic_track_caller.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const_panic_track_caller.rs:19:16
   |
LL | const X: u32 = c();
   |                ^^^ evaluation panicked: hey
   |
note: inside `c`
  --> $DIR/const_panic_track_caller.rs:15:5
   |
LL |     b()
   |     ^^^ the failure occurred here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
